# omie-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.sh
src/omie_mcp/: client.py  server.py
src/omie_mcp/tools/: contas_correntes.py  contas_pagar.py  contas_receber.py  fluxo_caixa.py  fornecedores.py  lancamentos_cc.py
