[project]
name = "omie-mcp"
version = "0.1.0"
description = "MCP Server para integração com o ERP OMIE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
omie-mcp = "omie_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omie_mcp"]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]
