[project]
name = "omie-mcp"
version = "0.1.0"
description = "MCP Server para integração com o ERP OMIE — controle financeiro via IA"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["omie", "erp", "mcp", "financeiro", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/lucassampsouza/omie-mcp"
Repository = "https://github.com/lucassampsouza/omie-mcp"
"Bug Tracker" = "https://github.com/lucassampsouza/omie-mcp/issues"

[project.scripts]
omie-mcp = "omie_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omie_mcp"]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]
